# wpmwar_program

./: Anchor.toml  README.md  new_program-keypair.json  package.json
programs/wpmwar_program/: Cargo.toml
programs/wpmwar_program/src/: lib.rs
scripts/: initialize_global_stats.ts
tests/: wpmwar_program.ts
