[package]
name = "wpmwar_program"
version = "0.1.1"
description = "Unleash your speed"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wpmwar_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-lang-idl = "0.1.2"
anchor-spl = { version = "0.31.1", features = ["idl-build"] }
derive = "1.0.0"

